fix(CI): handle different distributions in CI setup
This commit fixes the CI setup to handle different Linux distributions. It checks the distribution and installs the dependencies accordingly. It also adds a check to install `sudo` if it's not already installed.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,17 @@ jobs:
 
             - name: Install Dependencies
               run: |
+                  # Run commands as root
+                  if [ "$USER" != "root" ]; then
+                      exec su -c "$0 $*"
+                  fi
+
+                  # Install sudo
+                  if ! command -v sudo &> /dev/null; then
+                      apt-get update
+                      apt-get install -y sudo
+                  fi
+
                   # Detect distribution
                   if grep -qEi "debian|buntu|mint" /etc/*release; then
                       sudo apt-get update
