--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,26 +23,19 @@ jobs:
 
             - name: Install Dependencies
               run: |
-                  # Run commands as root
-                  if [ "$USER" != "root" ]; then
-                      exec su -c "$0 $*"
-                  fi
-
-                  # Install sudo
-                  if ! command -v sudo &> /dev/null; then
-                      apt-get update
-                      apt-get install -y sudo
-                  fi
-
-                  # Detect distribution
-                  if grep -qEi "debian|buntu|mint" /etc/*release; then
-                      sudo apt-get update
-                      sudo apt-get install -y git sudo zsh
-                  elif grep -qEi "fedora|centos|redhat" /etc/*release; then
-                      sudo dnf install -y git sudo zsh
-                  elif grep -qEi "arch" /etc/*release; then
-                      sudo pacman -Syu --noconfirm git sudo zsh
-                  fi
+                  # Determine package manager based on image name
+                  case "${{ matrix.image }}" in
+                      debian:*|ubuntu:*)
+                          apt-get update
+                          apt-get install -y git zsh
+                          ;;
+                      fedora:*)
+                          dnf install -y git zsh
+                          ;;
+                      archlinux:*)
+                          pacman -Syu --noconfirm git zsh
+                          ;;
+                  esac
 
             - name: Run Install Script
               run: |
