--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,18 @@
+# Unbind default reload key
 unbind r
+# Bind 'r' to reload configuration file
 bind r source-file ~/.tmux.conf
 
 # Set the prefix to C-s 
 set -g prefix C-s
 
-# Escape time 
+# Set escape time 
 set -sg escape-time 10
 
 # Enable focus events
 set -g focus-events on
 
-# act like vim
+# Set keys to act like vim
 setw -g mode-keys vi
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -21,6 +23,7 @@ bind-key l select-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
 
+# Dracula theme settings
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location "NYC"
 set -g @dracula-plugins "weather"
@@ -29,7 +32,9 @@ set -g @dracula-show-left-icon session
 set -g status-position top
 
 # Tc and RGB color support
-set -sa terminal-features ',xterm-256color:RGB'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version >= 3.2" | bc)" = 1 ]' \
+    "set -sa terminal-features ',xterm-256color:RGB'"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -38,18 +43,26 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+# Bind 'C-l' to send 'C-l' to Vim if Vim is active, or to select the right pane and clear the screen in tmux if Vim is not active
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R; send-keys C-l'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
+# Bind keys for copy-mode-vi
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+# Unset npm_config_prefix
+setenv -g -u npm_config_prefix
+
+# Enable mouse mode
+set -g mouse on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
