chore(ci): Adjust shell usage in GitHub Actions workflow
- Remove explicit `zsh` shell specification in GitHub Actions workflow due to compatibility issues. The workflow now uses the default shell and explicitly invokes `zsh` to run the install script.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,9 @@ jobs:
                   esac
 
             - name: Run Install Script
-              shell: zsh
               run: |
                   chmod +x install.sh
-                  ./install.sh
+                  zsh ./install.sh
 
     test-macos:
         runs-on: macos-latest
@@ -53,13 +52,12 @@ jobs:
             - name: Install Dependencies
               run: |
                   # You may need to adjust this command for macOS
-                  brew install git zsh
+                  brew install git zsh curl
 
             - name: Run Install Script
-              shell: zsh
               run: |
                   chmod +x install.sh
-                  ./install.sh
+                  zsh ./install.sh
 
     semantic-release:
         name: Semantic Release
