--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
                           apt-get install -y zsh vim git gdb build-essential jq nodejs npm python3 python3-pip locales
                           ;;
                       fedora:*)
-                          dnf install -y zsh vim git gdb gcc jq nodejs npm python3 python3-pip
+                          dnf install -y zsh vim git gdb gcc jq nodejs npm python3 python3-pip glibc-all-langpacks
                           ;;
                       archlinux:*)
                           pacman -Syu --noconfirm zsh vim git gdb gcc nodejs npm jq python python-pip
