--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,22 +25,23 @@ jobs:
               run: |
                   # Determine package manager based on image name
                   case "${{ matrix.image }}" in
-                      debian:*|ubuntu:*)
+                      debian*|ubuntu*)
                           apt-get update
-                          apt-get install -y zsh vim git gdb build-essential jq nodejs npm python3 python3-pip locales
+                          apt-get install -y zsh curl git gdb build-essential jq nodejs npm python3 python3-pip locales procps
                           ;;
-                      fedora:*)
-                          dnf install -y zsh vim git gdb gcc jq nodejs npm python3 python3-pip glibc-all-langpacks
+                      fedora*)
+                          dnf install -y zsh curl git gdb gcc jq nodejs npm python3 python3-pip glibc-all-langpacks procps-ng
                           ;;
-                      archlinux:*)
-                          pacman -Syu --noconfirm zsh vim git gdb gcc nodejs npm jq python python-pip
+                      archlinux*)
+                          pacman -Syu --noconfirm zsh curl git gdb gcc nodejs npm jq python python-pip procps-ng
                           ;;
                   esac
 
             - name: Run Install Script
+              shell: bash
               run: |
                   chmod +x install.sh
-                  bash ./install.sh
+                  ./install.sh
 
     test-macos:
         runs-on: macos-latest
@@ -51,12 +52,20 @@ jobs:
 
             - name: Install Dependencies
               run: |
+                  #   Install Homebrew
+                  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+                  #   Add Homebrew to PATH
+                  echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >> $HOME/.bashrc
+                  eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+                  #   Install Dependencies
                   brew install gcc git zsh curl jq node npm python3
 
             - name: Run Install Script
+              shell: bash
               run: |
+                  source $HOME/.bashrc
                   chmod +x install.sh
-                  zsh ./install.sh
+                  ./install.sh
 
     semantic-release:
         name: Semantic Release
