fix(install.sh): add debug logging

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: Test Installation
 
 on: [push, pull_request]
 
+env:
+    DEBUG: true
+
 jobs:
     test-linux:
         runs-on: ubuntu-latest
