--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,13 @@ jobs:
                   case "${{ matrix.image }}" in
                       debian*|ubuntu*)
                           apt-get update
-                          apt-get install -y zsh curl git gdb build-essential jq nodejs npm python3 python3-pip locales procps
+                          apt-get install -y zsh curl git gdb build-essential jq nodejs npm python3 python3-pip locales procps golang-go
                           ;;
                       fedora*)
-                          dnf install -y zsh curl git gdb gcc jq nodejs npm python3 python3-pip glibc-all-langpacks procps-ng
+                          dnf install -y zsh curl git gdb gcc jq nodejs npm python3 python3-pip glibc-all-langpacks procps-ng golang
                           ;;
                       archlinux*)
-                          pacman -Syu --noconfirm zsh curl git gdb gcc nodejs npm jq python python-pip procps-ng
+                          pacman -Syu --noconfirm zsh curl git gdb gcc nodejs npm jq python python-pip procps-ng go
                           ;;
                   esac
 
@@ -61,7 +61,7 @@ jobs:
                   echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >> $HOME/.bashrc
                   eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
                   #   Install Dependencies
-                  brew install gcc git zsh curl jq node npm python3
+                  brew install gcc git zsh curl jq node npm python3 go
 
             - name: Run Install Script
               shell: bash
