--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Go Cloud Development Container",
+    "name": "Dotfiles",
     "dockerComposeFile": [
         "docker-compose.yml"
     ],
