--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
 
             - name: Install Dependencies
               run: |
+                  brew unlink go || true # Unlink existing Go installation, if any
                   brew install gcc git zsh curl jq node npm python3 go
             - name: Run Install Script
               shell: bash
