--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,9 +56,9 @@ jobs:
 
             - name: Install Dependencies
               run: |
-                  brew unlink go@1.20 || true # Unlink existing Go installation, if any
-                  brew link --overwrite go || true
+                  brew uninstall --ignore-dependencies go@1.20 || true # Uninstall existing Go installation, if any
                   brew install gcc git zsh curl jq node npm python3 go
+                  brew link --overwrite go || true # Force link and overwrite all conflicting files
             - name: Run Install Script
               shell: bash
               run: |
