--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
               run: |
                   brew uninstall --ignore-dependencies go@1.20 || true # Uninstall existing Go installation, if any
                   brew install gcc git zsh curl jq node npm python3 go
+                  brew link --overwrite python@3.12 || true # Force link and overwrite all conflicting files
                   brew link --overwrite go || true # Force link and overwrite all conflicting files
             - name: Run Install Script
               shell: bash
