chore(ci): add Remove conflicting files step for macOS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,19 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
+            - name: Remove conflicting files
+              run: |
+                  rm '/usr/local/bin/2to3' || true
+                  rm '/usr/local/bin/2to3-3.12' || true
+                  rm '/usr/local/bin/idle3' || true
+                  rm '/usr/local/bin/idle3.12' || true
+                  rm '/usr/local/bin/pydoc3' || true
+                  rm '/usr/local/bin/pydoc3.12' || true
+                  rm '/usr/local/bin/python3' || true
+                  rm '/usr/local/bin/python3-config' || true
+                  rm '/usr/local/bin/python3.12' || true
+                  rm '/usr/local/bin/python3.12-config' || true
+
             - name: Install Dependencies
               run: |
                   brew uninstall --ignore-dependencies go@1.20 || true # Uninstall existing Go installation, if any
