--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,10 @@ jobs:
                   ./install.sh
 
     test-macos:
-        runs-on: macos-latest
+        env:
+            PYTHON_VERSION: 3.12
+            GO_VERSION: 1.20
+        runs-on: macos-12
         name: Test on macOS
         steps:
             - name: Checkout
@@ -53,23 +56,27 @@ jobs:
 
             - name: Remove conflicting files
               run: |
-                  rm '/usr/local/bin/2to3' || true
-                  rm '/usr/local/bin/2to3-3.12' || true
-                  rm '/usr/local/bin/idle3' || true
-                  rm '/usr/local/bin/idle3.12' || true
-                  rm '/usr/local/bin/pydoc3' || true
-                  rm '/usr/local/bin/pydoc3.12' || true
-                  rm '/usr/local/bin/python3' || true
-                  rm '/usr/local/bin/python3-config' || true
-                  rm '/usr/local/bin/python3.12' || true
-                  rm '/usr/local/bin/python3.12-config' || true
+                  for cmd in 2to3 \
+                      2to3-$PYTHON_VERSION \
+                      idle3 \
+                      idle3.$PYTHON_VERSION \
+                      pydoc3 \
+                      pydoc3.$PYTHON_VERSION \
+                      python3 \
+                      python3-config \
+                      python3.$PYTHON_VERSION \
+                      python3.$PYTHON_VERSION-config
+                  do
+                      rm "/usr/local/bin/$cmd" || true
+                  done
 
             - name: Install Dependencies
               run: |
-                  brew uninstall --ignore-dependencies go@1.20 || true # Uninstall existing Go installation, if any
-                  brew install gcc git zsh curl jq node npm python3 go
-                  brew link --overwrite python@3.12 || true # Force link and overwrite all conflicting files
+                  brew uninstall --ignore-dependencies go@$GO_VERSION || true # Uninstall existing Go installation, if any
+                  brew install gcc git zsh curl jq node npm python@$PYTHON_VERSION go
+                  brew link --overwrite python@$PYTHON_VERSION || true # Force link and overwrite all conflicting files
                   brew link --overwrite go || true # Force link and overwrite all conflicting files
+
             - name: Run Install Script
               shell: bash
               run: |
