--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
     test-macos:
         env:
             PYTHON_VERSION: 3.12
-            GO_VERSION: 1.20
+            GO_VERSION: '1.20'
         runs-on: macos-12
         name: Test on macOS
         steps:
