chore(ci): add setup environments step action
This commit introduces a new composite action for setting up Node.js, Python, and Go environments. This action is used in the Test Installation workflow to ensure that the necessary environments are set up before running tests.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,22 +22,8 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
-            - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: '21.x'
-                  check-latest: true
-
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                  python-version: '3.x'
-                  cache: 'pip'
-
-            - name: Set up Go
-              uses: actions/setup-go@v5
-              with:
-                  go-version: latest
+            - name: Setup Environments
+              uses: ./.github/actions/setup-environments
 
             - name: Install Dependencies
               run: |
@@ -68,22 +54,8 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
-            - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: '21.x'
-                  check-latest: true
-
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                  python-version: '3.x'
-                  cache: 'pip'
-
-            - name: Set up Go
-              uses: actions/setup-go@v5
-              with:
-                  go-version: latest
+            - name: Setup Environments
+              uses: ./.github/actions/setup-environments
 
             - name: Install Dependencies
               run: |
