--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,32 +8,30 @@ jobs:
         name: Test on Linux
         strategy:
             matrix:
-                config:
-                    [
-                        { image: 'debian:latest', name: 'Debian' },
-                        { image: 'ubuntu:latest', name: 'Ubuntu' },
-                        { image: 'fedora:latest', name: 'Fedora' },
-                        { image: 'archlinux:latest', name: 'Arch Linux' },
-                    ]
+                image:
+                    - debian:latest
+                    - ubuntu:latest
+                    - fedora:latest
+                    - archlinux:latest
         container:
-            image: ${{ matrix.config.image }}
+            image: ${{ matrix.image }}
 
         steps:
-            - name: Checkout on {{ matrix.image.name }}
+            - name: Checkout
               uses: actions/checkout@v4
 
-            - name: Install Dependencies on {{ matrix.image.name }}
+            - name: Install Dependencies
               run: |
                   # Determine package manager based on image name
-                  case "${{ matrix.config.name }}" in
-                      Debian|Ubuntu)
+                  case "${{ matrix.image }}" in
+                      debian*|ubuntu*)
                           apt-get update
                           apt-get install -y zsh curl git gdb build-essential jq nodejs npm python3 python3-pip locales procps golang-go
                           ;;
-                      Fedora|Rocky\ Linux)
+                      fedora*)
                           dnf install -y zsh curl git gdb gcc jq nodejs npm python3 python3-pip glibc-all-langpacks procps-ng golang
                           ;;
-                      Arch\ Linux*)
+                      archlinux*)
                           pacman -Syu --noconfirm zsh curl git gdb gcc nodejs npm jq python python-pip procps-ng go
                           ;;
                   esac
@@ -65,7 +63,7 @@ jobs:
             - name: Set up Go
               uses: actions/setup-go@v5
               with:
-                  go-version: latest
+                  go-version: '1.22.x'
 
             - name: Install Dependencies
               run: |
