feat(config.json): add rockylinux distro pacakages

--- a/config.json
+++ b/config.json
@@ -26,6 +26,7 @@
         "arch": "lua xclip tree-sitter tree-sitter-cli unzip ripgrep fd",
         "debian": "lua5.4 xclip unzip ripgrep fd-find python3-venv curl locales",
         "fedora": "lua fd-find python3-devel glibc-locale-source glibc-langpack-en",
+        "rocky": "lua fd-find python3-devel glibc-locale-source glibc-langpack-en",
         "ubuntu": "lua5.4 fd-find python3-venv locales",
         "macos": "lua fd"
     },
