--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,6 @@ jobs:
                     - debian:latest
                     - ubuntu:latest
                     - fedora:latest
-                    - rockylinux:9
                     - archlinux:latest
         container:
             image: ${{ matrix.image }}
@@ -29,7 +28,7 @@ jobs:
                           apt-get update
                           apt-get install -y zsh curl git gdb build-essential jq nodejs npm python3 python3-pip locales procps golang-go
                           ;;
-                      fedora*|rockylinux*)
+                      fedora*)
                           dnf install -y zsh curl git gdb gcc jq nodejs npm python3 python3-pip glibc-all-langpacks procps-ng golang
                           ;;
                       archlinux*)
