feat(install.sh): add `tmux` plugins installation

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,9 +24,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
 
 # Dracula theme settings
+# See: https://draculatheme.com/tmux
 set -g @dracula-show-powerline true
-set -g @dracula-fixed-location "NYC"
-set -g @dracula-plugins "weather"
+set -g @dracula-show-fahrenheit false
+set -g @dracula-plugins "cpu-usage ram-usage"
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
 set -g status-position top
@@ -35,6 +36,9 @@ set -g status-position top
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version >= 3.2" | bc)" = 1 ]' \
     "set -sa terminal-features ',xterm-256color:RGB'"
+if-shell -b '[ "$(echo "$tmux_version < 3.2" | bc)" = 1 ]' \
+    "set -sa terminal-features ',xterm-256color:RGB'" \
+    "set -ga terminal-overrides ',xterm-256color:Tc'"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
