feat(.tmux.conf): add dynamic terminal feature setting based on $TERM variable
This commit adds a new feature to the .tmux.conf file that dynamically sets the terminal features and overrides based on the $TERM environment variable. This improves the compatibility of the tmux configuration with different terminal types and tmux versions.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,11 +34,22 @@ set -g status-position top
 
 # Tc and RGB color support
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+# If tmux version is 3.2 or greater
 if-shell -b '[ "$(echo "$tmux_version >= 3.2" | bc)" = 1 ]' \
-    "set -sa terminal-features ',xterm-256color:RGB'"
+    "run-shell 'if [[ \$$TERM == xterm-256color ]]; then \
+        tmux set -sa terminal-features ,xterm-256color:RGB; \
+    elif [[ \$$TERM == screen-256color ]]; then \
+        tmux set -sa terminal-features ,screen-256color:RGB; \
+    fi'"
+# If tmux version is less than 3.2
 if-shell -b '[ "$(echo "$tmux_version < 3.2" | bc)" = 1 ]' \
-    "set -sa terminal-features ',xterm-256color:RGB'" \
-    "set -ga terminal-overrides ',xterm-256color:Tc'"
+    "run-shell 'if [[ \$$TERM == xterm-256color ]]; then \
+        tmux set -sa terminal-features ,xterm-256color:RGB; \
+        tmux set -ga terminal-overrides ,xterm-256color:Tc; \
+    elif [[ \$$TERM == screen-256color ]]; then \
+        tmux set -sa terminal-features ,screen-256color:RGB; \
+        tmux set -ga terminal-overrides ,screen-256color:Tc; \
+    fi'"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
