fix(install.sh): add parsing of `term_color`from config.json

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,20 +36,12 @@ set -g status-position top
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 # If tmux version is 3.2 or greater
 if-shell -b '[ "$(echo "$tmux_version >= 3.2" | bc)" = 1 ]' \
-    "run-shell 'if [[ \$$TERM == xterm-256color ]]; then \
-        tmux set -sa terminal-features ,xterm-256color:RGB; \
-    elif [[ \$$TERM == screen-256color ]]; then \
-        tmux set -sa terminal-features ,screen-256color:RGB; \
-    fi'"
+    "run-shell 'tmux set -sa terminal-features ,xterm-256color:RGB;'"
+
 # If tmux version is less than 3.2
 if-shell -b '[ "$(echo "$tmux_version < 3.2" | bc)" = 1 ]' \
-    "run-shell 'if [[ \$$TERM == xterm-256color ]]; then \
-        tmux set -sa terminal-features ,xterm-256color:RGB; \
-        tmux set -ga terminal-overrides ,xterm-256color:Tc; \
-    elif [[ \$$TERM == screen-256color ]]; then \
-        tmux set -sa terminal-features ,screen-256color:RGB; \
-        tmux set -ga terminal-overrides ,screen-256color:Tc; \
-    fi'"
+    "run-shell 'tmux set -sa terminal-features ,xterm-256color:RGB; \
+        tmux set -ga terminal-overrides ,xterm-256color:Tc;'"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -60,7 +52,6 @@ bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
 # Bind 'C-l' to send 'C-l' to Vim if Vim is active, or to select the right pane and clear the screen in tmux if Vim is not active
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R; send-keys C-l'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
