--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,8 @@ jobs:
               run: |
                   pip install -r requirements.txt
                   pip install coverage
+                  apt-get update
+                  apt-get install -y make
 
             - name: Generate coverage report
               run: |
